--- a/css/sections/_contacts.scss
+++ b/css/sections/_contacts.scss
@@ -11,20 +11,20 @@
   }
 }
 
-#contacts-map-form-wrapper {
+.contacts-map-form-wrapper {
   width: 100%;
   @include flex-container(space-between, nowrap);
   @media screen and (max-width: 815px) {
     flex-wrap: wrap;
   }
-  #form-wrapper {
+  .form-wrapper {
     width: 50%;
     margin: 0 auto;
     text-align: left;
     @media screen and (max-width: 815px) {
       width: 80%;
     }
-    #inputs-wrapper {
+    .inputs-wrapper {
       @include flex-container(space-between, nowrap);
       margin-bottom: 20px;
       input {
@@ -107,7 +107,7 @@
       }
     }
   }
-  #contacts-wrapper {
+  .contacts-wrapper {
     width: 25%;
     padding-bottom: 19px;
     display: inline-block;
@@ -126,7 +126,7 @@
     h6 {
       margin-bottom: 20px;
     }
-    #brand-text {
+    .brand-text {
       color: #c0dfda;
       font-size: $bigFZ;
       font-weight: 700;
@@ -134,11 +134,11 @@
     }
     address {
       font-style: normal;
-      #address {
+      .address {
         font-size: $smallFZ;
         margin-bottom: 10px;
       }
-      #contacts {
+      .contacts {
         @include flex-container(space-between, wrap);
         line-height: 20px;
         span {
@@ -146,14 +146,14 @@
         }
         span:last-of-type {
           color: #fff;
-          #email {
+          .email {
             text-decoration: underline;
           }
         }
       }
     }
   }
-  #map {
+  .map {
     width: 25%;
     height: 180px;
     background: #000;
